Oprava drobnych uprav v mainwindow,barva,velikost.

--- a/xpacne00/src/gui_qt/mainwindow.ui
+++ b/xpacne00/src/gui_qt/mainwindow.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1060</width>
+    <width>1068</width>
     <height>740</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="maximumSize">
@@ -78,7 +81,7 @@
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(255, 255, 255)</string>
+            <string notr="true"/>
            </property>
            <property name="title">
             <string>  Nástroje pro přehrávání</string>
@@ -318,7 +321,7 @@ border: none;</string>
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(255, 255, 255);</string>
+            <string notr="true"/>
            </property>
            <property name="title">
             <string>        Nástroje pro hru</string>
@@ -350,7 +353,7 @@ border: none;</string>
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(255, 255, 255)</string>
+            <string notr="true"/>
            </property>
            <property name="title">
             <string/>
@@ -368,8 +371,11 @@ border: none;</string>
           <height>20</height>
          </rect>
         </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
         <property name="text">
-         <string>server running on port: </string>
+         <string>  Server port:</string>
         </property>
        </widget>
       </widget>
@@ -425,7 +431,7 @@ border: none;</string>
       <widget class="QFrame" name="frame_Moves">
        <property name="maximumSize">
         <size>
-         <width>210</width>
+         <width>220</width>
          <height>16777215</height>
         </size>
        </property>
@@ -440,7 +446,7 @@ border: none;</string>
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>211</width>
+          <width>221</width>
           <height>650</height>
          </rect>
         </property>
@@ -457,8 +463,7 @@ border: none;</string>
          </size>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(255, 255, 255);
-border: none;</string>
+         <string notr="true">border: none;</string>
         </property>
         <property name="title">
          <string>Moves</string>
@@ -469,11 +474,17 @@ border: none;</string>
          </property>
          <property name="geometry">
           <rect>
-           <x>10</x>
+           <x>0</x>
            <y>20</y>
-           <width>191</width>
+           <width>211</width>
            <height>631</height>
           </rect>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>220</width>
+           <height>631</height>
+          </size>
          </property>
          <property name="font">
           <font>
@@ -485,8 +496,7 @@ border: none;</string>
           </font>
          </property>
          <property name="styleSheet">
-          <string notr="true">background-color: rgb(255, 255, 255);
-border: none;
+          <string notr="true">border: none;
 padding-left: 20px;</string>
          </property>
          <property name="verticalScrollBarPolicy">
@@ -510,8 +520,8 @@ padding-left: 20px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1060</width>
-     <height>22</height>
+     <width>1068</width>
+     <height>17</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuSoubor">
@@ -569,6 +579,9 @@ padding-left: 20px;</string>
    </property>
   </action>
   <action name="action_LocalLabel">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Lokální</string>
    </property>
@@ -580,6 +593,9 @@ padding-left: 20px;</string>
    </property>
   </action>
   <action name="action_NetLabel">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Síťová</string>
    </property>
